# genai_cookbook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
1_Intro/: prompt_engineering.ipynb  vae.ipynb
2_Langchain/: langchain_advanced.ipynb  langchain_summarizer.ipynb
3_RAG/: Advanced_RAG.ipynb  Intro_RAG.ipynb
3_RAG/rag_app/: README_GRADIO_APP.md  gradio_rag_app.py
4_Agents/: a2a.ipynb  smolagents.ipynb
4_Agents/mcp_server/: README_MCP_SERVER.md  mcp_server.py  mcp_server_example.py
