[project]
name = "genai_cookbook"
version = "0.1.0"
description = "Intro to GenAI - TDs"
requires-python = "==3.13"
dependencies = [
    "jsonschema",
    "openai",
    "matplotlib",
    "requests",
    "langchain-openai",
    "langchain-community==0.4.1",
    "pypdf",
    "tiktoken",
    "jupyterlab",
    "python-dotenv",
    "langchain",
    "gradio",
    "qdrant-client==1.15.1",
    "python-docx",
    "python-pptx",
    "rank-bm25",
    "streamlit",
    "scikit-learn",
    "seaborn",
    "newspaper3k",
    "langchain-mcp-adapters",
    "lxml-html-clean",
    "ddgs",
    "mcp",
    "smolagents[toolkit]",
    "google-generativeai",
    "typer",
    "duckduckgo-search",
    "fastapi-mcp",
    "uvicorn",
    "mcpadapt",
    "langchain-google-genai",
    "google-ai-generativelanguage",
    "langchain-core",
    "langchain-text-splitters",
    "langsmith",
    "langchain-qdrant==1.0.0",
]
